# live-ticker

./: Cargo.toml  README.md  build.rs
proto/: live_ticker.proto
src/: client.rs  exchange.rs  main.rs  venue_aggregator.rs
src/exchange/: binance.rs  okx.rs
